# flaskBlog

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  pytest.ini
app/: app.py  database.py  models.py  pyproject.toml  settings.py
app/db/: analytics.db  comments.db  users.db
app/routes/: about.py  account_settings.py  admin_panel.py  admin_panel_comments.py  admin_panel_posts.py  admin_panel_users.py  category.py  change_language.py  change_password.py  change_profile_picture.py  change_username.py  create_post.py  dashboard.py  edit_post.py  index.py  login.py  logout.py  password_reset.py  post.py  posts_analytics.py  privacy_policy.py  return_post_analytics_data.py  return_post_banner.py  search.py  search_bar.py  set_language.py  set_theme.py  signup.py  user.py  verify_user.py
app/scripts/: README.md  migrate_data.py
app/static/css/: flash.css
app/static/js/: markdown_editor.js  navbar.js  recaptcha.js  search_bar.js
app/templates/: about.html  account_settings.html  adminPanelUsers.html  admin_panel.html  admin_panel_comments.html  admin_panel_users.html  category.html  changeLanguage.html  changePassword.html  change_language.html  change_password.html  change_profile_picture.html  change_user_name.html  change_username.html  createPost.html  create_post.html  csrfError.html  csrf_error.html  dashboard.html  editPost.html  edit_post.html  index.html  layout.html  login.html  notFound.html  not_found.html  passwordReset.html  password_reset.html  post.html  privacy_policy.html  search.html  search_bar.html  signup.html  unauthorized.html  user.html  verifyUser.html  verify_user.html
app/templates/components/: change_theme.html  (+7 more)
app/translations/: de.json  en.json  es.json  fr.json  hi.json  ja.json  pl.json  pt.json  ru.json  tr.json  uk.json  zh.json
app/utils/: add_points.py  change_user_role.py  db_checker.py  delete.py  generate_url_id_from_post.py  get_post_url_id_from_post.py  get_profile_picture.py  paginate.py  terminal_ascii.py  time.py
(+26 files in other folders)
