[project]
name = "flaskBlog"
version = "3.0.0dev"
authors = [{ name = "Doğukan Ürker", email = "dogukanurker@icloud.com" }]
description = "Blog application built with Flask"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tamga",
    "flask",
    "flask-sqlalchemy",
    "flask-wtf",
    "passlib",
    "wtforms",
    "markdown2",
    "bleach",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-playwright",
    "playwright",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "auth: marks tests related to authentication",
    "admin: marks tests requiring admin privileges",
    "smoke: marks tests for smoke testing",
]
addopts = "-v --tb=short"
