[project]
name = "flaskBlog"
version = "3.0.0dev"
authors = [{ name = "Doğukan Ürker", email = "dogukanurker@icloud.com" }]
description = "Blog application built with Flask"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tamga>=1.4.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "passlib>=1.7.4",
    "wtforms>=3.2.1",
    "markdown2>=2.5.4",
    "bleach>=6.3.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
    "pytest-xdist>=3.8.0",
    "filelock>=3.20.3",
    "playwright>=1.57.0",
]
dev = [
    "ruff>=0.9.0",
]
